--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ NEXTAUTH_EMAIL=
 NEXTAUTH_EMAIL_PASSWORD=
 
 GITHUB_ACCESS_TOKEN=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_SECRET_KEY=
