--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "caniuse-lite": "^1.0.30001572",
+    "cloudinary": "^2.0.3",
     "cookies": "^0.8.0",
     "crypto": "^1.0.1",
     "ffmpeg": "^0.0.4",
@@ -44,6 +45,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^14.0.4",
     "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0",
     "node-fetch": "^3.3.2",
     "node-wav": "^0.0.2",
     "nodemailer": "^6.9.3",
