--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-wav": "^0.0.2",
     "nodemailer": "^6.9.3",
     "octokit": "^3.1.2",
+    "openai": "^4.29.0",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
