--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nodemailer": "^6.9.3",
     "octokit": "^3.1.2",
     "openai": "^4.29.0",
+    "pdf-lib": "^1.17.1",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
